@@ -1,5 +1,6 @@
 2007/02/23
 .updated assumed value parsing for CDvQuantity
+.added support for CDvQuantity starts with assumed value
 
 2007/02/20
 .added support for empty purpose
